apps/web/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-web
  template:
    metadata:
      labels:
        app: hello-web
    spec:
      containers:
        - name: hello-web
          image: ttl.sh/wito-hello-web:1h # I had never heard of this. Cool!
          imagePullPolicy: Always
          ports:
            - name: http-web
              containerPort: 4173
          livenessProbe:
            httpGet:
              path: /
              port: http-web
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
